Walk detached frames during PrePaint

We need to let detached frames up-to-date for painting because we can
print a detached frame directly with javascript.

Bug: 735059
Change-Id: Ifbb27c4178bb7fe310e5637b6205186b78ca12a9